Creacion de la vista inicio y detalles v1

--- a/src/login.html
+++ b/src/login.html
@@ -64,7 +64,8 @@
 				<!-- Tabs -->
 				<nav class="mb-6 grid grid-cols-2 rounded-lg bg-black/5 dark:bg-white/10 p-1 text-sm">
 					<button id="tab-login" class="tab active col-span-1 rounded-md px-3 py-2 font-medium transition focus:outline-none focus-visible:ring-2 focus-visible:ring-sky-400 data-[active=true]:bg-white data-[active=true]:text-slate-900"
-						data-target="panel-login" data-active="true">
+						data-target="panel-login" data-active="true"
+						type="button">
 						Iniciar sesión
 					</button>
 					<button id="tab-join" class="tab col-span-1 rounded-md px-3 py-2 font-medium transition focus:outline-none focus-visible:ring-2 focus-visible:ring-sky-400 data-[active=true]:bg-white data-[active=true]:text-slate-900"
