--- a/src/detalles.html
+++ b/src/detalles.html
@@ -31,6 +31,7 @@
         </div>
     </main>
 
+
     <footer
         class="mt-auto shrink-0 border-t border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 text-center text-xs text-slate-500 dark:text-slate-400 py-3">
         © 2025 Tablero de Actividades • Vista tipo Trello
@@ -42,14 +43,14 @@
         <div class="relative w-md max-w-2xl flex flex-col mt-10 mb-10">
             <div class="bg-white dark:bg-slate-800 w-md max-w-2xl rounded-lg shadow-xl ring-1 ring-slate-200 dark:ring-slate-700 flex flex-col"
                 role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-                <div class="flex items-start justify-between gap-4 px-3 py-4 border-b border-slate-200 dark:border-slate-700">
+                <div
+                    class="flex items-start justify-between gap-4 px-3 py-4 border-b border-slate-200 dark:border-slate-700">
                     <h2 id="modalTitle" class="text-lg font-semibold">Detalle de actividad</h2>
                     <button data-close-modal
                         class="text-slate-500 hover:text-slate-700 dark:hover:text-slate-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-brand"
                         aria-label="Cerrar">✕</button>
                 </div>
-                <div id="modalContent"
-                    class="px-3 py-4 space-y-6 text-sm overflow-y-auto h-auto"></div>
+                <div id="modalContent" class="px-3 py-4 space-y-6 text-sm overflow-y-auto h-auto"></div>
                 <div id="modalActions"
                     class="flex items-center justify-end gap-2 px-4 py-4 border-t border-slate-200 dark:border-slate-700 bg-slate-500 dark:bg-slate-900/40">
                 </div>
