--- a/src/tablero.html
+++ b/src/tablero.html
@@ -1321,7 +1321,7 @@
                 </div>
         </aside>
 
-        <!-- Modal de edicion de actividad -->
+        <!-- Modal de edicion de columna -->
         <aside class="container-modal z-40 hidden" id="modal-agregar-columna" data-modal aria-hidden="true">
                 <div class="absolute inset-0 bg-gray-800/70" data-modal-close></div>
 
