--- a/src/tablero.html
+++ b/src/tablero.html
@@ -1562,7 +1562,7 @@
         <!-- SortableJS -->
         <script src="./js/Sortable.min.js"></script>
         <script src="./js/toggle-tema.js"></script>
-        <script src="./js/modal-g.js"></script>
+        <script src="./js/modal.js"></script>
 
         <!-- Scrip para el drag and drop de las tarjetas -->
         <script>
