Fix join modal layout

--- a/src/modals.html
+++ b/src/modals.html
@@ -250,8 +250,8 @@
 
 <!-- Modal para unirse a un tablero -->
 <div class="container-modal z-50 hidden" id="modal-unirse" data-modal aria-hidden="true">
-    <div class="absolute inset-0 bg-slate-800/90" data-modal-close></div>
-    <div class="relative w-full max-w-sm mx-auto my-24 bg-white dark:bg-gray-900 rounded-lg shadow-lg border border-slate-200 dark:border-gray-700 p-6">
+    <div class="absolute inset-0 bg-slate-800/90 z-40" data-modal-close></div>
+    <div class="modal-panel max-w-sm z-50 border border-slate-200 dark:border-gray-700 p-6 bg-white dark:bg-gray-900">
         <div class="flex items-center justify-between mb-4">
             <h2 class="text-lg font-semibold text-slate-900 dark:text-slate-100">
                 Unirse a Tablero
